--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "server":"http-server ./public",
+    "start": "npm run server"
   },
   "author": "",
   "license": "ISC",
@@ -14,8 +17,19 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.26.2",
+    "gulp": "^3.9.1",
+    "jquery": "^3.1.1",
     "jsx-loader": "^0.13.2",
+    "lodash": "^4.17.4",
+    "mainfun": "^1.0.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0",
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1"
+  },
+  "devDependencies": {
+    "http-server": "^0.9.0"
   }
 }
